; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vmd/extr_vmd.c_vmd_alloc_resource.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vmd/extr_vmd.c_vmd_alloc_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }

@PCI_RES_BUS = common dso_local global i32 0, align 4
@PCI_DOMAINMAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.resource* (i32, i32, i32, i32*, i32, i32, i32, i32)* @vmd_alloc_resource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.resource* @vmd_alloc_resource(i32 %0, i32 %1, i32 %2, i32* %3, i32 %4, i32 %5, i32 %6, i32 %7) #0 {
  %9 = alloca %struct.resource*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store i32 %0, i32* %10, align 4
  store i32 %1, i32* %11, align 4
  store i32 %2, i32* %12, align 4
  store i32* %3, i32** %13, align 8
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  %18 = load i32, i32* %12, align 4
  %19 = load i32, i32* @PCI_RES_BUS, align 4
  %20 = icmp eq i32 %18, %19
  br i1 %20, label %21, label %33

21:                                               ; preds = %8
  %22 = load i64, i64* @PCI_DOMAINMAX, align 8
  %23 = load i32, i32* %10, align 4
  %24 = call i64 @device_get_unit(i32 %23)
  %25 = sub nsw i64 %22, %24
  %26 = load i32, i32* %11, align 4
  %27 = load i32*, i32** %13, align 8
  %28 = load i32, i32* %14, align 4
  %29 = load i32, i32* %15, align 4
  %30 = load i32, i32* %16, align 4
  %31 = load i32, i32* %17, align 4
  %32 = call %struct.resource* @pci_domain_alloc_bus(i64 %25, i32 %26, i32* %27, i32 %28, i32 %29, i32 %30, i32 %31)
  store %struct.resource* %32, %struct.resource** %9, align 8
  br label %43

33:                                               ; preds = %8
  %34 = load i32, i32* %10, align 4
  %35 = load i32, i32* %11, align 4
  %36 = load i32, i32* %12, align 4
  %37 = load i32*, i32** %13, align 8
  %38 = load i32, i32* %14, align 4
  %39 = load i32, i32* %15, align 4
  %40 = load i32, i32* %16, align 4
  %41 = load i32, i32* %17, align 4
  %42 = call %struct.resource* @pcib_alloc_resource(i32 %34, i32 %35, i32 %36, i32* %37, i32 %38, i32 %39, i32 %40, i32 %41)
  store %struct.resource* %42, %struct.resource** %9, align 8
  br label %43

43:                                               ; preds = %33, %21
  %44 = load %struct.resource*, %struct.resource** %9, align 8
  ret %struct.resource* %44
}

declare dso_local %struct.resource* @pci_domain_alloc_bus(i64, i32, i32*, i32, i32, i32, i32) #1

declare dso_local i64 @device_get_unit(i32) #1

declare dso_local %struct.resource* @pcib_alloc_resource(i32, i32, i32, i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
